<resources>
    <string name="app_name">LSBE</string>
    <string name="toolbar" translatable="false">Toolbar</string>
    <string name="access_token" translatable="false">31bf3856ad364e35</string>
    <string name="label_email" translatable="false">Email ID</string>
    <string name="label_number" translatable="false">Enter Mobile</string>
    <string name="label_mobile" translatable="false">Mobile #</string>
    <string name="label_qulification" translatable="false">Qualification</string>
    <string name="label_region" translatable="false">Region</string>
    <string name="label_city" translatable="false">City</string>
    <string name="label_dob" translatable="false">Date of Birth</string>
    <string name="label_gender" translatable="false">Gender</string>
    <string name="label_set_acc" translatable="false">Set Account details for FPAP\nWebsite and App</string>
    <string name="label_pass" translatable="false">Password</string>
    <string name="label_confirm_pass" translatable="false">Retype Password</string>
    <string name="label_login" translatable="false">LOGIN</string>
    <string name="label_forgot_pass" translatable="false">Forgot Password?</string>
    <string name="label_new_user" translatable="false">New User?</string>
    <string name="label_register_now" translatable="false">Register Now</string>
    <string name="label_register" translatable="false">Register</string>
    <string name="label_existing_user" translatable="false">Existing user?</string>
    <string name="label_login_now" translatable="false">Login now</string>
    <string name="label_send_pass" translatable="false">Send Password</string>
    <string name="label_welcome_text" translatable="false">Welcome to Life Skills Based Education Course</string>
    <string name="dashboard_toolbar" translatable="false">LSBE Online Course</string>
    <string name="dashboard_subject" translatable="false">Subject</string>
    <string name="label_human_rights" translatable="false">Human Rights</string>
    <string name="label_dashboard" translatable="false">Dashboard</string>
    <string name="label_certificate" translatable="false">Certificate</string>
    <string name="label_profile" translatable="false">Profile</string>
    <string name="label_signout" translatable="false">Signout</string>
    <string name="label_english_med" translatable="false">English med</string>
    <string name="label_urdu_med" translatable="false">Urdu med</string>
    <string name="label_internal_personal" translatable="false">Interpersonal Relationships</string>
    <string name="label_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="label_start_with_pre_test" translatable="false">To start this course, you need to attempt a Pre-Test</string>
    <string name="label_start_post_test" translatable="false">Start your post-Test</string>
    <string name="label_start_with_pre_test_result" translatable="false">Your pre test result :</string>
    <string name="label_start_with_post_test" translatable="false">Start your course with the post test\ngiven below:</string>
    <string name="label_start_with_post_test_result" translatable="false">Your post test result :</string>
    <string name="label_step1" translatable="false">Step 1</string>
    <string name="label_step2" translatable="false">Step 2</string>
    <string name="label_pre_test" translatable="false">Pre-Test</string>
    <string name="label_once_you_completed" translatable="false">Once you have completed study of the course content, you can take a post test below</string>
    <string name="label_post_test" translatable="false">Post-Test</string>
    <string name="label_question" translatable="false">Questions</string>
    <string name="label_no_of_question" translatable="false">10 Questions</string>
    <string name="label_start_test" translatable="false">Start Test</string>
    <string name="label_start_pre_test" translatable="false">Start Pre-Test</string>
    <string name="label_take_test" translatable="false">Take Test</string>
    <string name="label_correct_ans" translatable="false">Correct Ans</string>
    <string name="label_05" translatable="false">05</string>
    <string name="label_incorrect_ans" translatable="false">Incorrect Ans</string>
    <string name="label_test_passed" translatable="false">Test Passed</string>
    <string name="label_test_failed" translatable="false">Test Failed</string>
    <string name="label_congo" translatable="false">Congratulations</string>
    <string name="label_ops" translatable="false">Try Again</string>
    <string name="label_desc" translatable="false">You have passed the test.</string>
    <string name="label_desc_failed" translatable="false">You have failed in this test. Please prepare\nand take the test again</string>
    <string name="label_desc1" translatable="false">You have passed the test. Now you can\ndownload all courses achievements certificate.</string>
    <string name="label_download_certificate" translatable="false">Download Certificate</string>
    <string name="label_test_again" translatable="false">Test Again</string>
    <string name="label_chose_another_course" translatable="false">Choose another course to study</string>
    <string name="label_your_journey" translatable="false">Your LSBE Courses Journey</string>
    <string name="label_dummy_time" translatable="false">02:22 Mins</string>
    <string name="dummy_question" translatable="false">The number of fundamental particles in an atom of the lightest isotope carbon are</string>
    <string name="label_submit" translatable="false">Submit</string>
    <string name="label_user_name" translatable="false">Jolliya Rafique</string>
    <string name="label_course_certificate" translatable="false">Course Certificate</string>
    <string name="label_status" translatable="false">Status</string>
    <string name="label_date" translatable="false">Date</string>
    <string name="label_dummy_date" translatable="false">03 June,2022</string>
    <string name="label_download" translatable="false">DOWNLOAD</string>
    <string name="label_course_achievement" translatable="false">All Course Achievement\nCertificate</string>
    <string name="label_are_you_sure_to_signout" translatable="false">Are you sure you want\nto signout?</string>
    <string name="label_question_01" translatable="false">Question 01</string>
    <string name="press_back_again" translatable="false">Press Back Again to exit</string>
    <string name="label_field_required" translatable="false">This field is required</string>
    <string name="label_pass_not_matched" translatable="false">Password not matched</string>
    <string name="label_enter_email" translatable="false">Please enter your email</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="plz_wait" translatable="false">Please wait…</string>
    <string name="label_sign_out" translatable="false">Sign Out</string>
    <string name="label_yes" translatable="false">Yes</string>
    <string name="label_no" translatable="false">No</string>
    <string name="option_a" translatable="false">A:</string>
    <string name="relative_atomic_number" translatable="false">Relative Atomic Number</string>
    <string name="no_of_mcqs" translatable="false">of</string>
    <string name="label_name" translatable="false">Name:</string>
    <string name="opn_a" translatable="false">A:</string>
    <string name="opn_b" translatable="false">B:</string>
    <string name="opn_c" translatable="false">C:</string>
    <string name="opn_d" translatable="false">D:</string>
    <string name="label_are_you_sure_submit" translatable="false">Are you sure you want\nto submit?</string>
    <string name="helpline_desc" translatable="false"><![CDATA[For more information you can contact for free at youth helpline number of UNFPA & FPAP & get information from male & female counselors.]]></string>
    <string name="service_u_can_access" translatable="false">Services you can access Rahnuma-FPAP Youth Helpline Dial toll free</string>
    <string name="registered_students" translatable="false">Registered Students</string>
    <string name="label_complete" translatable="false">Complete LSBE online course</string>
    <string name="label_partial" translatable="false">Partially completed\nLSBE Course</string>
    <string name="label_single" translatable="false">Completed single\nLSBE Course</string>
    <string name="label_helpline" translatable="false">Youth Helpline</string>
    <string name="lahore" translatable="false">LAHORE</string>
    <string name="islamabad" translatable="false">ISLAMABAD</string>
    <string name="karachi" translatable="false">KARACHI</string>
    <string name="quetta" translatable="false">QUETTA</string>
    <string name="peshawar" translatable="false">PESHAWAR</string>
    <string name="national" translatable="false">NATIONAL YOUTH</string>
    <string name="gilgit_baltistan" translatable="false">GILGIT BALTISTAN</string>
    <string name="punjab" translatable="false">PUNJAB YOUTH</string>
    <string name="label_report" translatable="false">Live Certifications Status</string>
    <string name="content" translatable="false">Content</string>
    <string name="video" translatable="false">Video</string>
    <string name="key_message" translatable="false">Key\nMessage</string>
    <string name="key_message2" translatable="false">Key Message</string>
    <string name="download" translatable="false">Download</string>
    <string name="mcqs" translatable="false">Mcqs</string>
    <string name="question" translatable="false">Question</string>
    <string name="cant_select_multiple_option" translatable="false">you cannot select multiple options</string>
    <string name="test_already_taken" translatable="false">Test already taken</string>
    <string name="label_pass_all_course" translatable="false">Pass all courses to be eligible for All Courses\nAchievement Certificate</string>
    <string name="saved" translatable="false">File saved successfully</string>
    <string name="error_download" translatable="false">Error while downloading</string>
    <string name="congratulations" translatable="false">Congratulations</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>
    <string name="choose_course" translatable="false">Choose Course</string>
    <string name="plz_choose_course" translatable="false">Select  Health and Hygiene course content for:</string>
    <string name="label_incomplete_no" translatable="false">Number is incomplete</string>
    <string name="label_valid_email" translatable="false">Please enter a valid email address</string>
    <string name="lbl_min_pass" translatable="false">Password should be minimum 6 characters</string>
</resources>