<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@color/grey_lite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_start_test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/label_start_with_pre_test"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_One"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_001"
        android:paddingTop="@dimen/_20dp"
        android:paddingBottom="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_start_test">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_time_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/first_guide"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/second_guide"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />



            <TextView
                android:id="@+id/tv_step1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_t20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/label_step1"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12sp"
                app:layout_constraintEnd_toEndOf="@id/first_guide"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_pre_test"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_tt20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/label_pre_test"
                android:textColor="@color/purple"
                android:textSize="@dimen/_14sp"
                app:layout_constraintEnd_toEndOf="@id/tv_step1"
                app:layout_constraintStart_toStartOf="@id/tv_step1"
                app:layout_constraintTop_toBottomOf="@id/tv_step1" />

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_t20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/label_question"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12sp"
                app:layout_constraintEnd_toEndOf="@id/second_guide"
                app:layout_constraintStart_toStartOf="@id/first_guide"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_no_of_question"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_tt20dp"
                android:fontFamily="@font/poppins_medium"
                tools:text="@string/label_no_of_question"
                android:textColor="@color/purple"
                android:textSize="@dimen/_14sp"
                app:layout_constraintEnd_toEndOf="@id/tv_question"
                app:layout_constraintStart_toStartOf="@id/tv_question"
                app:layout_constraintTop_toBottomOf="@id/tv_question" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start_test"
                style="@style/AppTheme.ContainedButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_b30dp"
                android:text="@string/label_start_test"
                android:textSize="@dimen/_b12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/second_guide"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_inner"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/second_guide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/third_guide"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.50" />

                <TextView
                    android:id="@+id/tv_correct_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/label_correct_ans"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@id/third_guide"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_no_of_corrent_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/label_05"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_correct_answer"
                    app:layout_constraintStart_toStartOf="@id/tv_correct_answer"
                    app:layout_constraintTop_toBottomOf="@id/tv_correct_answer" />

                <TextView
                    android:id="@+id/tv_incorrect_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/label_incorrect_ans"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/third_guide"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_no_of_incorrent_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/label_05"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_incorrect_answer"
                    app:layout_constraintStart_toStartOf="@id/tv_incorrect_answer"
                    app:layout_constraintTop_toBottomOf="@id/tv_incorrect_answer" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>